--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,14 @@ body {
   text-align: center;
 }
 
-.apple{
+#apple-shelf {
   background: lightcoral;
   border-radius: 10px;
   height: 30px;
   margin: 10px 0;
 }
 
-.oranges{
+#orange-shelf {
   background: lightsalmon;
   border-radius: 10px;
   height: 30px;
